refactor: Reestructuración del código para mejorar la organización y la mantenibilidad.
Se ha refactorizado el código para mejorar la organización y la mantenibilidad, creando un sistema de gestión de estado con la clase 'State' y separando la lógica de la vista en diferentes archivos.  Se han añadido archivos de definición de tipos ('index.d.ts') y constantes ('src/constant.ts').  La lógica principal se encuentra ahora en 'src/index.ts', con las vistas separadas en la carpeta 'src/views'.

[by Kommiter]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
       "resolveFullPaths": true,
       "verbose": false
     },
-    "include": ["src"], // Incluye la carpeta src para la compilación.
+    "include": ["src", "index.d.ts"], // Incluye la carpeta src para la compilación.
     "exclude": ["node_modules"] // Excluye node_modules.
   }
